--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -58,3 +58,11 @@ changelog:
             - 'README'
             - Merge pull request
             - Merge branch
+# Seperate repo that you need to create before you deploy.
+brews:
+    - github:
+          owner: imthaghost
+          name: homebrew-imthaghost
+      folder: Formula
+      homepage: https://github.com/imthaghost/goclone
+      description: Website Cloner - Utilizes powerful go routines to clone websites to your computer within seconds.
