--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -62,7 +62,7 @@ changelog:
 brews:
     - github:
           owner: imthaghost
-          name: homebrew-imthaghost
+          name: homebrew-goclone
       folder: Formula
       homepage: https://github.com/imthaghost/goclone
       description: Website Cloner - Utilizes powerful go routines to clone websites to your computer within seconds.
